--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,10 +22,17 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+
+    aaptOptions {
+        noCompress "tflite"
+        noCompress "lite"
+    }
+    
     compileSdkVersion 30
 
     sourceSets {
@@ -35,7 +42,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "hris.hris"
-        minSdkVersion 18
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
