--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,22 @@ dependencies:
   rxdart: ^0.24.0
   equatable: ^1.1.1
   flutter_secure_storage: ^3.3.3
-  dio: ^3.0.9
+  dio: ^4.0.0
   introduction_screen: ^1.0.9
-  flutter_svg: ^0.19.3
+  flutter_svg: 
   eva_icons_flutter: ^2.0.0
-  http: ^0.12.0
+  http: ^0.13.0
+  google_fonts: ^2.0.0
+  percent_indicator: ^2.1.9+1
+  shared_preferences: ^2.0.5
+  tflite_flutter: ^0.8.0
+  camera: ^0.8.1
+  path_provider: ^2.0.1
+  path: ^1.8.0
+  google_ml_kit: ^0.5.0
+  image: ^3.0.2
+  font_awesome_flutter: ^9.0.0
+  url_launcher: ^6.0.3
 
 
 
@@ -57,6 +68,7 @@ flutter:
   assets:
     - assets/logo.png
     - assets/001-documents.png
+    - assets/mobilefacenet.tflite
 
   # To add assets to your application, add an assets section, like this:
   # assets:
